Fixed team section overflow.

--- a/source/stylesheets/modules/_team.scss
+++ b/source/stylesheets/modules/_team.scss
@@ -1,5 +1,6 @@
 .team {
-  padding: 200px 0 0;
+  overflow: hidden;
+  padding: 200px 0;
   &__text-container {
     max-width: 480px;
     margin-bottom: 80px;
